Correction de l'alignement des titres des modales sur mobile

--- a/assets/scss/components/_modals.scss
+++ b/assets/scss/components/_modals.scss
@@ -56,7 +56,8 @@
     }
 
     .modal-title {
-        display: block;
+        display: flex;
+        align-items: center;
 
         margin-left: 0;
 
